--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?sdjvzsgw#1" target="_blank">首页</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/1?zqkkrm" target="_blank">动态网</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/2?asxgj" target="_blank">大纪元</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/4?znuuusn" target="_blank">看中国</a> | <a href="https://db8nk66phkh66.cloudfront.net/pHh5q?jebyedkjv" target="_blank">新生网</a> | <a href="https://d21y52w6f35pla.cloudfront.net/tktpt?hapvc" target="_blank">阿波罗网</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/Mjpvu?qqlbivle" target="_blank">干净世界</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/10?abblsfm" target="_blank">退党服务</a> | <a href="https://d2oemtubh889hy.cloudfront.net/Rffqf?aopnpwda" target="_blank">明慧广播</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/nw9Vn?qkhfqjja" target="_blank">传奇时代</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/AF9AG?bbtpqoa" target="_blank">新境界影视</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/zqMQA?ayepupn" target="_blank">文昭谈论</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/7?dsixpx" target="_blank">明慧</a></p><p><a href="https://d1eqe8yfgc9j6n.cloudfront.net/9?mybfozftl" target="_blank">大法</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/3?thzupz" target="_blank">新唐人</a> | <a href="https://d1u99il8548gs4.cloudfront.net/obAhT?qntsg" target="_blank">人民报</a> | <a href="https://dycg1eql8aigr.cloudfront.net/xXNHu?ypbdftncb" target="_blank">放光明</a> | <a href="https://db1uzmukbk5lb.cloudfront.net/5?loxvnbk" target="_blank">新纪元</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/6?rwlmtawrz" target="_blank">希望之声</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/11?jwwsnsgzw" target="_blank">无界网络</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/Pueji?vdjxpan" target="_blank">追查国际</a> | <a href="https://d2184d78prq5kd.cloudfront.net/16?syoqnxzw" target="_blank">明慧之窗</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/LdvzZ?vcnvhdtk" target="_blank">细语人生</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/fBn3r?qzzmtdp" target="_blank">新世纪影视</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/PUWMb?woxcp" target="_blank">江峰时刻</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/8?scsbohnu" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?susugo#1" target="_blank">首页</a> | <a href="https://d2184d78prq5kd.cloudfront.net/1?icleyjhet" target="_blank">动态网</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/2?dznajyvq" target="_blank">大纪元</a> | <a href="https://dol9bue5bysdj.cloudfront.net/4?odyxhdq" target="_blank">看中国</a> | <a href="https://d2n08tj75ohh5.cloudfront.net/pHh5q?vhwll" target="_blank">新生网</a> | <a href="https://d15m60lsma25jk.cloudfront.net/tktpt?ttwalosfq" target="_blank">阿波罗网</a> | <a href="https://db1uzmukbk5lb.cloudfront.net/Mjpvu?euxbnfih" target="_blank">干净世界</a> | <a href="https://d2sn4gemyo21al.cloudfront.net/10?txiliu" target="_blank">退党服务</a> | <a href="https://d15m60lsma25jk.cloudfront.net/Rffqf?vgryippfc" target="_blank">明慧广播</a> | <a href="https://d2fq83y0z2h6n4.cloudfront.net/nw9Vn?tsqpwiyn" target="_blank">传奇时代</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/AF9AG?xpazwz" target="_blank">新境界影视</a> | <a href="https://d19vw3711v9lks.cloudfront.net/zqMQA?uakbn" target="_blank">文昭谈论</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/7?mkynzog" target="_blank">明慧</a></p><p><a href="https://d1qri8o0k49d18.cloudfront.net/9?mmehzybko" target="_blank">大法</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/3?lysifibd" target="_blank">新唐人</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/obAhT?wiujbz" target="_blank">人民报</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/xXNHu?sjvawfl" target="_blank">放光明</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/5?zdloyiqj" target="_blank">新纪元</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/6?zsvejgtte" target="_blank">希望之声</a> | <a href="https://d22qnxkzs9qeoh.cloudfront.net/11?btsxixnmw" target="_blank">无界网络</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/Pueji?pjaol" target="_blank">追查国际</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/16?wgsdjf" target="_blank">明慧之窗</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/LdvzZ?mbneeqhnq" target="_blank">细语人生</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/fBn3r?fvelavrq" target="_blank">新世纪影视</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/PUWMb?slkrs" target="_blank">江峰时刻</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/8?ptbnplzc" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390926.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/12/id14390927-179302-320x200.jpg"><p align="center">全球礼品卡诈骗激增 买前如何辨别</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390926.md#1" title="全球礼品卡诈骗激增 买前如何辨别""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14390927-179302-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390947.md#1" title="上海访民集体进京遭遣返 顾国平曝被警察虐待""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/10/id13852427-36-200RG2095E93-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390734.md#1" title="脱钩持续 美中国债收益率差距达十年来最大""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/09/id14340256-GettyImages-479864820-1080x720-1-320x200.webp">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389996.md#1" title="川普：将递解非法入境外国人 重刑犯为主""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/10/id14359190-DSC02269A-trump-madison_2-1080x720-1-320x200.jpeg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390926.md#1">全球礼品卡诈骗激增 买前如何辨别</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390947.md#1">上海访民集体进京遭遣返 顾国平曝被警察虐待</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391022.md#1">韩国国会通过总统弹劾案 尹锡悦发表讲话</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390993.md#1">前“美女书记”林虹被查 曾直播带货引关注</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390961.md#1">担忧遭到美国制裁？中海油将美资产售予英企</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390926.md#1">全球礼品卡诈骗激增 买前如何辨别</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390947.md#1">上海访民集体进京遭遣返 顾国平曝被警察虐待</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391022.md#1">韩国国会通过总统弹劾案 尹锡悦发表讲话</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390993.md#1">前“美女书记”林虹被查 曾直播带货引关注</a><br>
+:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390961.md#1">担忧遭到美国制裁？中海油将美资产售予英企</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390981.md#1">澳外长感谢共推海缆 台外交部：彰显伙伴关系</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390934.md#1">极越汽车大裁员 中国电动车洗牌风暴来临？</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390980.md#1">北约秘书长指中共霸凌 台外交部：合作捍卫和平</a><br>
 :clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390957.md#1">厦门大学女生遭霸凌受重伤 学生拟游行维权</a><br>
-:clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390911.md#1">台经济部：投资台湾三大方案已逾785亿美元</a><br>
+:clock8: <em>7小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390911.md#1">台经济部：投资台湾三大方案已逾785亿美元</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389628.md#1">海关署长俞建华猝死 其靠山被指是丁薛祥</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390067.md#1">中共强制兵役登记 分析：恐惧“大变局”</a><br>
@@ -108,13 +108,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387732.md#1">【百年真相】毛泽东时代的红卫兵悲剧</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388037.md#1">迎国际人权日 洛城集会抗议中共迫害人权</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387875.md#1">王友群：中共的“新战略”只会加速其灭亡</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3jlooi54ehffy.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d3jlooi54ehffy.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,187</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d29evdqpbieoyo.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d29evdqpbieoyo.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,750</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 440,142,788 人
+!共 440,143,410 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389683.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927201-FotoJet-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389683.md#1">遭骚扰失工作 湖北异议人士：中共逼人上绝路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388646.md#1">世界人权日 大陆访民曝长期被迫害毫无人权</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387321.md#1">冯崇义：西媒助中共打压法轮功是世界耻辱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387247.md#1">大陆商人：经济快速倒退 望中国人觉醒</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387339.md#1">吴绍平：邪不压正 中共对法轮功跨国镇压必败</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384459.md#1">三位老人因信仰遭中共野蛮虐待 受伤严重</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390048.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2010/10/101009104056-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390048.md#1">白领工作难找 中国年轻人热衷考导游证</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390108.md#1">中共拟让人民币贬值抗关税？纳瓦罗发警告</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390044.md#1">经济不景疯买黄金 中国人遭骗子洗钱者诈骗</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389902.md#1">极越汽车突然解散 员工社保断缴 CEO被围堵</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389402.md#1">警告中共？耶伦：将强烈回应操纵货币行为</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389371.md#1">广州深圳多家医院医生收入降30%或“腰斩”</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390993.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/12/id14390995-b7d6b66cc8c0e60d5658da24e0d01269-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390993.md#1">前“美女书记”林虹被查 曾直播带货引关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390980.md#1">北约秘书长指中共霸凌 台外交部：合作捍卫和平</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390816.md#1">台外长：台美关系稳健发展 盼继续深化交流</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390792.md#1">阿萨德迅速垮台 中共专家对叙利亚评论被打脸</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390764.md#1">美或限制高端芯片发货到东南亚 堵中共后门</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390708.md#1">【新闻大破解】美军反制 共军围岛不敢说演习</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14387027.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/12/id14387433-309b68da6b7c5860904e4367f862ca68-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14387027.md#1">停课、隔离 大陆多地学校集体爆发水痘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390749.md#1">家中书房起火被困 大陆37岁主持人李昕鑫离世</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390359.md#1">吉林一烤肉店爆炸 建筑碎片被炸飞 至少13人伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389685.md#1">湖北荆州大型无人机坠毁 现场浓烟滚滚</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389419.md#1">深圳豪宅楼爆炸 多楼层过火 更多细节流出</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389009.md#1">深圳湾一豪宅发生爆炸 目击者称有人跳楼</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390957.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/12/id14390963-FireShot-Capture-1031--320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390957.md#1">厦门大学女生遭霸凌受重伤 学生拟游行维权</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390884.md#1">重庆夫妻吵架时往窗外扔刀 外卖员被砸伤住院</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390845.md#1">南京大屠杀纪念日 中国逾半日本人学校停课</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390832.md#1">三退声明精选（2024/12/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390195.md#1">中国多地出现俄货商店 民众：大多东北生产</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390190.md#1">沈阳一知名主持人因家中失火去世 仅37岁</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386560.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/04/id14222084-annie-yi-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386560.md#1">56岁伊能静大方认老 自拍戴老花镜补妆获赞</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384614.md#1">影响几世代 琼瑶影视剧那些年捧红的女星</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383548.md#1">【一线采访】学生跳楼频发 武汉多区取消期中考</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/11/30/n14382096.md#1">分析：为何华为手机Mate 70竞争力走衰</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/11/23/n14377270.md#1">考研人数暴跌 折射中国大学生心态何种转折</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375908.md#1">87版《红楼梦》“鸳鸯”扮演者郑铮病逝</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385852.md#1">【独家】二十大前习亲定攻击法轮功新战略</a><br>
